tests/resource/valid/access/index_via_function.mamba
def f() -> Slice => 0 :: 2 :: 2
def g() -> Slice => 0 ::= 2 :: 2

def i() -> Range => 0 .. 2 .. 2
def j() -> Range => 0 ..= 2 .. 2

def x := [1, 2, 3]
x[f()]
