tests/resource/invalid/type/operation/in_list_wrong_ty.mamba
def x := [ 1, 2, 3 ]

"za" in x
